added genesis scripts and update config with websocket

--- a/deploy/local/config.json.templ
+++ b/deploy/local/config.json.templ
@@ -53,6 +53,7 @@
         "io_threads": "4",
         "work_threads": "4",
         "enable_voting": "true",
+	"enable_websocket": "false",
         "bootstrap_connections": "4",
         "bootstrap_connections_max": "64",
         "callback_address": "localhost",
