cleanup of generation scripts, local launch script fixes

--- a/deploy/local/config.json.templ
+++ b/deploy/local/config.json.templ
@@ -54,6 +54,7 @@
         "work_threads": "4",
         "enable_voting": "true",
 	"enable_websocket": "false",
+	"identity_control_enabled": "true",
         "bootstrap_connections": "4",
         "bootstrap_connections_max": "64",
         "callback_address": "localhost",
