updated genesis scripts to include user info

--- a/deploy/distributed/cluster_files/bench.json.tmpl
+++ b/deploy/distributed/cluster_files/bench.json.tmpl
@@ -64,6 +64,7 @@
         "online_weight_quorum": "50",
         "version": "12",
         "identity_control_enabled": "true",
+	"enable_websocket": "false",
         "ConsensusManager": {
 	        "peer_port": "60000",
 	        "local_address": "{{LOGOS_LOCAL_IP}}",
